# CrabMate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks-debug-env.sh  .typos.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README-en.md  README.md  chat_export_20260419_092627.md  chat_export_20260422_220734.md  chat_export_20260705_112829.md  config.toml.example  default_config.toml  deny.toml  e2e-layout-test.mjs
crates/crabmate-agent/: Cargo.toml
crates/crabmate-agent/src/: acceptance_regression_golden.rs  context_budget_pressure.rs  intent_l0.rs  intent_pipeline.rs  lib.rs  log_preview.rs  plan_artifact_golden.rs  plan_ensemble.rs  plan_rewrite.rs  plan_semantic.rs  step_executor_policy.rs  step_verifier.rs  turn_budget.rs  turn_tool_policy.rs
crates/crabmate-benchmark/: Cargo.toml
crates/crabmate-benchmark/src/: adapter.rs  artifact.rs  lib.rs  metrics.rs  types.rs
crates/crabmate-config/: Cargo.toml
crates/crabmate-config/src/: agent_role_spec.rs  assembly.rs  builder.rs  cursor_rules.rs  env_overrides.rs  env_overrides_chat_queue.rs  env_overrides_intent.rs  env_overrides_mcp_codebase.rs  env_overrides_part9.rs  env_overrides_per_plan_policy.rs  final_plan_requirement_mode.rs  finalize.rs  gateway_hints.rs  hot_reload.rs  lib.rs  load.rs  orchestration_profile.rs  scheduled_agent_task.rs  skills.rs  source.rs  text_util.rs  validate.rs
crates/crabmate-dsml/: Cargo.toml
crates/crabmate-dsml/src/: adapter.rs  lib.rs  parser.rs  staged_policy.rs  stream.rs  strip.rs  tests_materialize_tail.rs
crates/crabmate-im-bridge/: Cargo.toml
crates/crabmate-im-bridge/src/: crabmate.rs  env_config.rs  feishu.rs  feishu_decrypt.rs  feishu_event_queue.rs  feishu_message_content.rs  feishu_tool_card.rs  feishu_workspace.rs  lib.rs  main.rs  sse_consumer.rs
crates/crabmate-internal/: Cargo.toml
crates/crabmate-internal/fixtures/: tool_result_envelope_golden.jsonl
crates/crabmate-internal/src/: agent_errors.rs  agent_role_turn.rs  agent_turn_prep.rs  cargo_metadata.rs  clarification_sse_bridge.rs  dynamic_tools.rs  health.rs  lib.rs  long_term_memory_tools.rs  memory_tool_hosts.rs  observability.rs  process_handles.rs  read_file_turn_cache.rs  request_chrome_trace.rs  text_util.rs  tool_call_explain.rs  tool_stats.rs  user_message_file_refs.rs  web_static_dir.rs
crates/crabmate-llm/: Cargo.toml
crates/crabmate-llm/src/: backend.rs  backend_openai.rs  backend_shared.rs  cache_stats.rs  chat_params.rs  complete_error.rs  fingerprint.rs  http_client.rs  lib.rs  openai_models.rs  recording.rs  requests.rs  retry.rs  retry_hooks.rs  stream_host.rs  stream_scratch.rs  trace_sink.rs  vendor_messages.rs
crates/crabmate-mcp/: Cargo.toml
crates/crabmate-mcp/src/: lib.rs  mcp_impl.rs  resolve.rs  stub.rs  turn_handle.rs
crates/crabmate-memory/: Cargo.toml
crates/crabmate-memory/src/: lib.rs  tool_check.rs
crates/crabmate-runtime/: Cargo.toml
crates/crabmate-runtime/src/: chat_export.rs  cli_exit.rs  cli_wait_spinner.rs  latex_unicode.rs  lib.rs  message_display.rs  message_display_parts.rs  message_snapshot_display.rs  plan_section.rs  tables.rs
crates/crabmate-sse-protocol/: Cargo.toml  control_classify.rs  control_extract.rs  lib.rs  stream_end_reason.rs
crates/crabmate-sse-protocol/src/: control_classify.rs  lib.rs  sse_frame.rs
crates/crabmate-tools/: Cargo.toml
crates/crabmate-tools/src/: health_dep_compat.rs  lib.rs  memory_tool_host.rs  project_profile.rs  redact.rs  registry_policy.rs  text_encoding.rs  tool_dispatch.rs  tool_naming.rs  tool_runtime.rs
crates/crabmate-turn-layout/: Cargo.toml  event.rs  lib.rs  model.rs  project.rs  reduce.rs  replay.rs
crates/crabmate-types/: Cargo.toml
crates/crabmate-types/src/: chat_api.rs  lib.rs  llm_config.rs  mcp_types.rs  message.rs  (+7 more)
crates/crabmate-workflow/: Cargo.toml
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend-leptos/: Cargo.toml  README.md  index.html  styles.css
frontend-leptos/fixtures/: chat_ex2.md  chat_resp1.md
frontend-leptos/src/: api.rs  app.rs  app_prefs.rs  assistant_body.rs  chat_session_state.rs  clarification_form.rs  client_llm_presets.rs  conversation_hydrate.rs  i18n.rs  lib.rs  markdown.rs  message_format.rs  message_render.rs  session_export.rs  session_modal_row.rs  session_ops.rs  session_search.rs  session_sort.rs  session_sync.rs  settings_llm_fields.rs  sse_dispatch.rs  storage.rs  timeline_scan.rs  workspace_shell.rs  workspace_tree.rs
frontend-leptos/styles/: approval.css  base.css  components.css  layout-chat.css  modal.css  motion.css  shell-ds.css  sidebar.css  status.css  tokens.css
frontend/fixtures/: chat_ex2.md  chat_resp1.md
frontend/scripts/: build-ide-editor.mjs  ide-codemirror-entry.mjs  verify_sse_control_golden.ts
frontend/src/: App.tsx  a11y.rs  agentPlanDisplay.ts  api.ts  app_prefs.rs  assistant_body.rs  chatExport.ts  chat_actions.rs  chat_session_state.rs  client_llm_presets.rs  confirm_dialog.rs  conversation_hydrate.rs  conversation_hydrate_timeline.rs  conversation_messages_page.rs  conversation_prompt_tokens_apply.rs  debounce_schedule.rs  ide_c_cpp_highlight.rs  ide_codemirror.rs  ide_confirm.rs  ide_disk_sync.rs  ide_editor_prefs.rs  ide_find.rs  ide_highlight_common.rs  ide_json_highlight.rs  ide_markdown_highlight.rs  ide_python_highlight.rs  ide_rust_highlight.rs  ide_save.rs  ide_script_highlight.rs  ide_shell_highlight.rs  ide_syntax_highlight.rs  ide_tabs.rs  ide_toml_highlight.rs  ide_yaml_highlight.rs  index.css  lib.rs  markdown.rs  message_dedupe.rs  message_loading.rs  message_render.rs  (+26 more)
frontend/styles/: app.bundle.css  approval.css  base.css  components.css  fonts-local.css  ide-codemirror.css  ide-highlight.css  ide-layout.css  layout-chat.css  modal.css  motion.css  shell-ds.css  shell-topbar.css  sidebar.css  status.css  tauri-shell.css  tokens.css
frontend/themes/: README.md  custom.example.css  high-contrast.css  light.css  material.css
(+1877 files in other folders)
