[workspace]
members = [
    ".",
    "frontend",
    "crates/cmd_mate",
    "crates/crabmate-display-rules",
    "crates/crabmate-tool-card",
    "crates/crabmate-sse-protocol",
    "crates/crabmate-im-bridge",
    "crates/crabmate-types",
    "crates/crabmate-config",
    "crates/crabmate-llm",
    "crates/crabmate-agent",
    "crates/crabmate-internal",
]
resolver = "2"

[package]
name = "crabmate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust AI agent: OpenAI-compatible chat/completions, function calling, Web UI, CLI"
# 存在 `crabmate-gen-man` 时，`cargo run` 须默认主二进制（与 README「cargo run」一致）。
default-run = "crabmate"

[package.metadata.deb]
maintainer = "CrabMate <adustofsnow@163.com>"
license-file = "README.md"
extended-description = """\
CrabMate is a Rust AI agent that uses OpenAI-compatible chat/completions to reach LLM backends \
(e.g. DeepSeek, MiniMax, local Ollama). It supports function calling, workspace-oriented command \
and file tools, a Web UI (Axum + Leptos), and a CLI (REPL, one-shot chat, and serve). Configuration \
is TOML plus environment variables; see /usr/share/doc/crabmate/ after install."""
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
assets = [
    # 二进制：安装到 /usr/bin
    ["target/release/crabmate", "usr/bin/crabmate", "755"],
    # 默认配置分片
    ["config/default_config.toml", "etc/crabmate/default_config.toml", "644"],
    ["config/session.toml", "etc/crabmate/session.toml", "644"],
    ["config/context_inject.toml", "etc/crabmate/context_inject.toml", "644"],
    ["config/tools.toml", "etc/crabmate/tools.toml", "644"],
    ["config/sandbox.toml", "etc/crabmate/sandbox.toml", "644"],
    ["config/planning.toml", "etc/crabmate/planning.toml", "644"],
    ["config/memory.toml", "etc/crabmate/memory.toml", "644"],
    ["config/prompts/base_system_prompt.md", "usr/share/doc/crabmate/config/prompts/base_system_prompt.md", "644"],
    ["config/prompts/coding_workbench_increment.md", "usr/share/doc/crabmate/config/prompts/coding_workbench_increment.md", "644"],
    # 文档
    ["README.md", "usr/share/doc/crabmate/README.md", "644"],
    # man page（troff；由 `cargo run --bin crabmate-gen-man` 再生成）
    ["man/crabmate.1", "usr/share/man/man1/crabmate.1", "644"],
]

[features]
default = ["mcp", "fastembed"]
## Model Context Protocol（`rmcp`）：`mcp list` / `mcp serve`、进程内 MCP 工具代理。
mcp = ["dep:rmcp", "crabmate-config/mcp", "crabmate-internal/mcp"]
## `sync_default_tool_sandbox_mode = docker` 时连接 Docker Engine（`bollard`）。
docker_sandbox = ["dep:bollard", "crabmate-config/docker_sandbox", "crabmate-internal/docker_sandbox"]
## 本地向量嵌入（**fastembed** / ONNX）：长期记忆 `fastembed` 后端、`codebase_semantic_search` 的向量索引与 hybrid/semantic 查询。
fastembed = ["dep:fastembed", "crabmate-config/fastembed", "crabmate-internal/fastembed"]

[dependencies]
cmd_mate = { path = "crates/cmd_mate" }
crabmate-display-rules = { path = "crates/crabmate-display-rules" }
crabmate-tool-card = { path = "crates/crabmate-tool-card" }
crabmate-sse-protocol = { path = "crates/crabmate-sse-protocol" }
crabmate-types = { path = "crates/crabmate-types" }
crabmate-config = { path = "crates/crabmate-config" }
crabmate-llm = { path = "crates/crabmate-llm" }
crabmate-agent = { path = "crates/crabmate-agent" }
crabmate-internal = { path = "crates/crabmate-internal" }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.10"
# `serde_yaml` 已归档；`yaml_serde` 为兼容替代，crate 名仍用 `serde_yaml` 以免改全仓 import。
serde_yaml = { package = "yaml_serde", version = "0.10" }
# 避免 `full`：仅启用代码路径实际用到的子特性，缩短 `cargo build` / `cargo check` 解析与编译图。
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
chrono = "0.4"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
markdown-to-ansi = "0.2"
unicodeit = "0.2"
regex = "1"
glob = "0.3"
sha2 = "0.10"
subtle = "2.6"
blake3 = "1.5"
base64 = "0.22"
urlencoding = "2.1"
similar = "2.7"
csv = "1.3"
unicode-width = "0.1"
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "local-time",
    "std",
    "time",
] }
axum = { version = "0.7", features = ["json", "multipart"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "set-header"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
uom = { version = "0.36", features = ["si"] }
path-absolutize = "3"
diffy = "0.4"
walkdir = "2"
ignore = "0.4"
tempfile = "3"
thiserror = "2"
tokei = { version = "14", default-features = false }
fastembed = { version = "5.13", optional = true }
rmcp = { version = "1.3", optional = true, default-features = false, features = [
    "client",
    "server",
    "transport-child-process",
    "transport-io",
] }
indicatif = "0.18"
reedline = { version = "0.46", default-features = false }
dialoguer = { version = "0.12", default-features = false }
encoding_rs = "0.8"
chardetng = "0.1"
clap_mangen = { version = "0.2", default-features = false }
# 关闭 bollard 默认 feature，仅启用本仓库用到的：`http`（hyper 客户端）、`pipe`（Unix 套接字 / Windows named pipe）。
# 未启用 `ssl`：不支持 `DOCKER_HOST=https://` 与 `DOCKER_TLS_VERIFY`（本地 `unix://` / 明文 `tcp://` 不受影响）。需 TLS 时改为 `features = ["http", "pipe", "ssl"]`。
bollard = { version = "0.18", optional = true, default-features = false, features = [
    "http",
    "pipe",
] }
scraper = "0.26.0"
ego-tree = "0.11"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
jsonschema = { version = "0.28", default-features = false }
tokio-cron-scheduler = { version = "0.15", default-features = false }
# 内置工具 parameters：可选由类型 `JsonSchema` 生成，与 `jsonschema` 运行时校验对齐（MIT / Apache-2.0 双许可）
schemars = { version = "0.8", features = ["derive"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
tiktoken-rs = { version = "0.12", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs", "dir", "signal", "term", "process"] }

[[bin]]
name = "crabmate-gen-man"
path = "src/bin/crabmate_gen_man.rs"

[dev-dependencies]
serde_json = "1"
proptest = "1"
tempfile = "3"
