[workspace]
members = [
    ".",
    "frontend",
    "crates/cmd_mate",
    "crates/crabmate-display-rules",
    "crates/crabmate-tool-card",
    "crates/crabmate-sse-protocol",
    "crates/crabmate-im-bridge",
    "crates/crabmate-types",
    "crates/crabmate-config",
    "crates/crabmate-llm",
    "crates/crabmate-agent",
    "crates/crabmate-internal",
]
resolver = "2"

[package]
name = "crabmate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust AI agent: OpenAI-compatible chat/completions, function calling, Web UI, CLI"
# 存在 `crabmate-gen-man` 时，`cargo run` 须默认主二进制（与 README「cargo run」一致）。
default-run = "crabmate"

[package.metadata.deb]
maintainer = "CrabMate <adustofsnow@163.com>"
license-file = "README.md"
extended-description = """\
CrabMate is a Rust AI agent that uses OpenAI-compatible chat/completions to reach LLM backends \
(e.g. DeepSeek, MiniMax, local Ollama). It supports function calling, workspace-oriented command \
and file tools, a Web UI (Axum + Leptos), and a CLI (REPL, one-shot chat, and serve). Configuration \
is TOML plus environment variables; see /usr/share/doc/crabmate/ after install."""
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
assets = [
    # 二进制：安装到 /usr/bin
    ["target/release/crabmate", "usr/bin/crabmate", "755"],
    # 默认配置分片
    ["config/default_config.toml", "etc/crabmate/default_config.toml", "644"],
    ["config/session.toml", "etc/crabmate/session.toml", "644"],
    ["config/context_inject.toml", "etc/crabmate/context_inject.toml", "644"],
    ["config/tools.toml", "etc/crabmate/tools.toml", "644"],
    ["config/sandbox.toml", "etc/crabmate/sandbox.toml", "644"],
    ["config/planning.toml", "etc/crabmate/planning.toml", "644"],
    ["config/memory.toml", "etc/crabmate/memory.toml", "644"],
    ["config/prompts/base_system_prompt.md", "usr/share/doc/crabmate/config/prompts/base_system_prompt.md", "644"],
    ["config/prompts/coding_workbench_increment.md", "usr/share/doc/crabmate/config/prompts/coding_workbench_increment.md", "644"],
    # 文档
    ["README.md", "usr/share/doc/crabmate/README.md", "644"],
    # man page（troff；由 `cargo run --bin crabmate-gen-man` 再生成）
    ["man/crabmate.1", "usr/share/man/man1/crabmate.1", "644"],
]

[features]
default = ["web", "repl", "tui"]
## Axum HTTP、`serve`、会话 SQLite、`/chat` 队列等。
web = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:rusqlite",
    "dep:tokio-cron-scheduler",
]
## 交互式 REPL（**reedline**）。
repl = ["dep:reedline", "dep:unicode-width"]
## 全屏 TUI（**ratatui** / **crossterm**）；隐含 **repl**（共用行编辑与斜杠命令）。
tui = ["repl", "dep:ratatui", "dep:crossterm"]
## `cargo run --bin crabmate-gen-man` 生成 troff 手册页。
gen-man = ["dep:clap_mangen"]
## Model Context Protocol（`rmcp`）：`mcp list` / `mcp serve`、进程内 MCP 工具代理。
mcp = ["crabmate-agent/mcp", "crabmate-config/mcp", "crabmate-internal/mcp"]
## `sync_default_tool_sandbox_mode = docker` 时连接 Docker Engine（`bollard`）。
docker_sandbox = [
    "crabmate-agent/docker_sandbox",
    "crabmate-config/docker_sandbox",
    "crabmate-internal/docker_sandbox",
]
## 本地向量嵌入（**fastembed** / ONNX）：长期记忆 `fastembed` 后端、`codebase_semantic_search` 的向量索引与 hybrid/semantic 查询。
fastembed = [
    "crabmate-agent/fastembed",
    "crabmate-config/fastembed",
    "crabmate-internal/fastembed",
]

[dependencies]
cmd_mate = { path = "crates/cmd_mate" }
crabmate-display-rules = { path = "crates/crabmate-display-rules" }
crabmate-tool-card = { path = "crates/crabmate-tool-card" }
crabmate-sse-protocol = { path = "crates/crabmate-sse-protocol" }
crabmate-types = { path = "crates/crabmate-types" }
crabmate-config = { path = "crates/crabmate-config", default-features = false }
crabmate-llm = { path = "crates/crabmate-llm" }
crabmate-agent = { path = "crates/crabmate-agent", default-features = false }
crabmate-internal = { path = "crates/crabmate-internal", default-features = false }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.10"
serde_yaml = { package = "yaml_serde", version = "0.10" }
# 避免 `full`：仅启用代码路径实际用到的子特性，缩短 `cargo build` / `cargo check` 解析与编译图。
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
chrono = "0.4"
regex = "1"
sha2 = "0.11"
subtle = "2.6"
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "local-time",
    "std",
    "time",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
thiserror = "2"
jsonschema = { version = "0.46", default-features = false }
tiktoken-rs = { version = "0.12", default-features = false }
markdown-to-ansi = "0.2"
unicodeit = "0.2"
axum = { version = "0.8", optional = true, features = ["json", "multipart"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "set-header", "compression-gzip"] }
rusqlite = { version = "0.40", optional = true, features = ["bundled"] }
tokio-cron-scheduler = { version = "0.15", optional = true, default-features = false }
reedline = { version = "0.48", optional = true, default-features = false }
indicatif = "0.18"
unicode-width = { version = "0.1", optional = true }
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", optional = true }
clap_mangen = { version = "0.3", optional = true, default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs", "dir", "signal", "term", "process"] }

[[bin]]
name = "crabmate-gen-man"
path = "src/bin/crabmate_gen_man.rs"
required-features = ["gen-man"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[dev-dependencies]
serde_json = "1"
proptest = "1"
tempfile = "3"
