[workspace]
members = [
    ".",
    "frontend",
    "crates/cmd_mate",
    "crates/crabmate-display-rules",
    "crates/crabmate-tool-card",
    "crates/crabmate-sse-protocol",
    "crates/crabmate-turn-layout",
    "crates/crabmate-im-bridge",
    "crates/crabmate-types",
    "crates/crabmate-config",
    "crates/crabmate-llm",
    "crates/crabmate-agent",
    "crates/crabmate-tools",
    "crates/crabmate-memory",
    "crates/crabmate-internal",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates
cmd_mate = { path = "crates/cmd_mate" }
crabmate-agent = { path = "crates/crabmate-agent", default-features = false }
crabmate-config = { path = "crates/crabmate-config", default-features = false }
crabmate-display-rules = { path = "crates/crabmate-display-rules" }
crabmate-internal = { path = "crates/crabmate-internal", default-features = false }
crabmate-llm = { path = "crates/crabmate-llm" }
crabmate-memory = { path = "crates/crabmate-memory" }
crabmate-sse-protocol = { path = "crates/crabmate-sse-protocol" }
crabmate-tool-card = { path = "crates/crabmate-tool-card" }
crabmate-tools = { path = "crates/crabmate-tools" }
crabmate-turn-layout = { path = "crates/crabmate-turn-layout" }
crabmate-types = { path = "crates/crabmate-types" }

# Shared third-party (pin versions; enable features per crate)
async-trait = "0.1"
base64 = "0.22"
bzip2 = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
dialoguer = { version = "0.12", default-features = false }
diffy = "0.5"
ego-tree = "0.11"
encoding_rs = "0.8"
flate2 = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
glob = "0.3"
ignore = "0.4"
indicatif = "0.18"
jsonschema = { version = "0.47", default-features = false }
libc = "0.2"
log = "0.4"
termimad = "0.35"
path-absolutize = "4"
proptest = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
schemars = { version = "1", features = ["derive"] }
scraper = "0.27.0"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
sha2 = "0.11"
similar = "3.1"
subtle = "2.6"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tiktoken-rs = { version = "0.12", default-features = false }
tokei = { version = "14", default-features = false }
tokio = { version = "1", default-features = false }
tokio-cron-scheduler = { version = "0.15", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
unicodeit = "0.2"
unicode-width = { version = "0.2" }
urlencoding = "2.1"
uom = { version = "0.38", features = ["si"] }
walkdir = "2"
xz2 = "0.1"
zip = { version = "8.6", default-features = false, features = ["deflate", "time"] }

# HTTP / optional UI (feature-gated in root)
axum = { version = "0.8", default-features = false }
clap_mangen = { version = "0.3", default-features = false }
crossterm = { version = "0.29" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "layout-cache"] }
reedline = { version = "0.49", default-features = false }
tower = { version = "0.5" }
tower-http = { version = "0.6" }

# Unix-only
nix = { version = "0.31", default-features = false }

[package]
name = "crabmate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust AI agent: OpenAI-compatible chat/completions, function calling, Web UI, CLI"
# 存在 `crabmate-gen-man` 时，`cargo run` 须默认主二进制（与 README「cargo run」一致）。
default-run = "crabmate"

[package.metadata.deb]
maintainer = "CrabMate <adustofsnow@163.com>"
license-file = "README.md"
extended-description = """\
CrabMate is a Rust AI agent that uses OpenAI-compatible chat/completions to reach LLM backends \
(e.g. DeepSeek, MiniMax, local Ollama). It supports function calling, workspace-oriented command \
and file tools, a Web UI (Axum + Leptos), and a CLI (REPL, one-shot chat, and serve). Configuration \
is TOML plus environment variables; see /usr/share/doc/crabmate/ after install."""
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
assets = [
    # 二进制：安装到 /usr/bin
    ["target/release/crabmate", "usr/bin/crabmate", "755"],
    # 默认配置分片
    ["config/default_config.toml", "etc/crabmate/default_config.toml", "644"],
    ["config/session.toml", "etc/crabmate/session.toml", "644"],
    ["config/context_inject.toml", "etc/crabmate/context_inject.toml", "644"],
    ["config/tools.toml", "etc/crabmate/tools.toml", "644"],
    ["config/sandbox.toml", "etc/crabmate/sandbox.toml", "644"],
    ["config/planning.toml", "etc/crabmate/planning.toml", "644"],
    ["config/memory.toml", "etc/crabmate/memory.toml", "644"],
    ["config/prompts/base_system_prompt.md", "usr/share/doc/crabmate/config/prompts/base_system_prompt.md", "644"],
    ["config/prompts/coding_workbench_increment.md", "usr/share/doc/crabmate/config/prompts/coding_workbench_increment.md", "644"],
    # 文档
    ["README.md", "usr/share/doc/crabmate/README.md", "644"],
    # man page（troff；由 `cargo run --bin crabmate-gen-man` 再生成）
    ["man/crabmate.1", "usr/share/man/man1/crabmate.1", "644"],
]

[features]
default = ["web", "repl", "tui", "mcp"]
## Axum HTTP、`serve`、会话 SQLite、`/chat` 队列等。
web = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:rusqlite",
    "dep:tokio-cron-scheduler",
]
## 交互式 REPL（**reedline**）。
repl = ["dep:reedline", "dep:unicode-width"]
## 全屏 TUI（**ratatui** / **crossterm**）；隐含 **repl**（共用行编辑与斜杠命令）。
tui = ["repl", "dep:ratatui", "dep:crossterm"]
## `cargo run --bin crabmate-gen-man` 生成 troff 手册页。
gen-man = ["dep:clap_mangen"]
## Model Context Protocol（`rmcp`）：`mcp list` / `mcp serve`、进程内 MCP 工具代理。
mcp = ["crabmate-config/mcp", "crabmate-internal/mcp"]
## `code_stats` / 项目画像 tokei 统计（未启用时用内置扩展名 walk）。
project_metrics = [
    "crabmate-internal/project_metrics",
]
## `sync_default_tool_sandbox_mode = docker` 时连接 Docker Engine（`bollard`）。
docker_sandbox = [
    "crabmate-config/docker_sandbox",
    "crabmate-internal/docker_sandbox",
]
## 本地向量嵌入（**fastembed** / ONNX）：长期记忆 `fastembed` 后端、`codebase_semantic_search` 的向量索引与 hybrid/semantic 查询。
fastembed = [
    "crabmate-config/fastembed",
    "crabmate-internal/fastembed",
]

[dependencies]
cmd_mate = { workspace = true }
crabmate-display-rules = { workspace = true }
crabmate-tool-card = { workspace = true }
crabmate-sse-protocol = { workspace = true }
crabmate-turn-layout = { workspace = true }
crabmate-types = { workspace = true }
crabmate-config = { workspace = true, default-features = false }
crabmate-llm = { workspace = true }
crabmate-agent = { workspace = true, default-features = false }
crabmate-internal = { workspace = true, default-features = false }
reqwest = { workspace = true, features = ["json", "stream", "blocking", "rustls-tls"] }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
# 避免 `full`：仅启用代码路径实际用到的子特性，缩短 `cargo build` / `cargo check` 解析与编译图。
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
    "signal",
] }
chrono = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
tiktoken-rs = { workspace = true }
termimad = { workspace = true }
unicodeit = { workspace = true }
axum = { workspace = true, optional = true, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "multipart",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["fs", "set-header"] }
rusqlite = { workspace = true, optional = true }
tokio-cron-scheduler = { workspace = true, optional = true }
reedline = { workspace = true, optional = true }
indicatif = { workspace = true }
unicode-width = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
clap_mangen = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "dir", "signal", "term", "process"] }

[[bin]]
name = "crabmate-gen-man"
path = "src/bin/crabmate_gen_man.rs"
required-features = ["gen-man"]

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[profile.release]
# 默认关闭 LTO，加快 `cargo build --release`；体积敏感发布可改用下方 `release-lto` profile。
lto = false

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# WASM 前端（crabmate-web）优先优化体积
[profile.release.package.crabmate-web]
opt-level = "z"
