[package]
name = "crabmate-web-leptos"
version = "0.1.0"
edition = "2024"
description = "CrabMate Web UI (Leptos CSR + WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_dom = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "DomRect",
    "Event",
    "File",
    "FileList",
    "Headers",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Window",
] }
