[package]
name = "crabmate-web-leptos"
version = "0.1.0"
edition = "2024"
description = "CrabMate Web UI (Leptos CSR + WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ammonia = "4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_dom = "0.8.8"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Blob",
    "Clipboard",
    "BlobPropertyBag",
    "Document",
    "DocumentFragment",
    "DomRect",
    "Element",
    "Event",
    "File",
    "FileList",
    "Headers",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Range",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Selection",
    "Storage",
    "Url",
    "WheelEvent",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
