[package]
name = "crabmate-web"
version = "0.1.0"
edition = "2024"
description = "CrabMate Web UI (Leptos CSR + WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crabmate-display-rules = { path = "../crates/crabmate-display-rules" }
crabmate-tool-card = { path = "../crates/crabmate-tool-card" }
crabmate-sse-protocol = { path = "../crates/crabmate-sse-protocol" }
crabmate-turn-layout = { path = "../crates/crabmate-turn-layout" }
ammonia = ">=4.1.3"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_dom = "0.8.8"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "console",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "Event",
    "FormData",
    "File",
    "FileList",
    "HashChangeEvent",
    "Headers",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Selection",
    "Url",
    "WheelEvent",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
