[package]
name = "crabmate-web"
version = "0.1.0"
edition = "2024"
description = "CrabMate Web UI (Leptos CSR + WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crabmate-display-rules = { workspace = true }
crabmate-tool-card = { workspace = true }
crabmate-sse-protocol = { workspace = true }
crabmate-turn-layout = { workspace = true }
ammonia = ">=4.1.4"
async-trait = { workspace = true }
futures-util = { workspace = true }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_dom = "0.8.8"
pulldown-cmark = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "console",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "Event",
    "FormData",
    "File",
    "FileList",
    "HashChangeEvent",
    "Headers",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Selection",
    "Url",
    "WheelEvent",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
