[package]
name = "crabmate-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate agent domain layer (plan artifacts, intent routing, acceptance, reflection)"

[features]
default = []
project_metrics = ["crabmate-internal/project_metrics"]
mcp = ["crabmate-internal/mcp"]
fastembed = ["crabmate-internal/fastembed"]
docker_sandbox = ["crabmate-internal/docker_sandbox"]

[dependencies]
crabmate-config = { path = "../crabmate-config", default-features = false }
crabmate-internal = { path = "../crabmate-internal", default-features = false }
crabmate-llm = { path = "../crabmate-llm" }
crabmate-types = { path = "../crabmate-types" }
async-trait = "0.1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
crabmate-config = { path = "../crabmate-config" }
