[package]
name = "crabmate-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate agent domain layer (plan artifacts, intent routing, acceptance, reflection)"

[features]
default = []

[dependencies]
crabmate-config = { path = "../crabmate-config", default-features = false }
crabmate-llm = { path = "../crabmate-llm" }
crabmate-tools = { path = "../crabmate-tools" }
crabmate-types = { path = "../crabmate-types" }
async-trait = "0.1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
crabmate-config = { path = "../crabmate-config" }
