[package]
name = "crabmate-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate agent domain layer (plan artifacts, intent routing, acceptance, reflection)"

[features]
default = []

[dependencies]
crabmate-config = { workspace = true, default-features = false }
crabmate-llm = { workspace = true }
crabmate-tools = { workspace = true }
crabmate-types = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
crabmate-config = { workspace = true }
