[package]
name = "crabmate-config"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Agent configuration loading and types for CrabMate (SDK foundation)"

[features]
default = []
fastembed = []
docker_sandbox = []
mcp = []
## cron 定时任务（serve 模式）：启用 `[[scheduled_agent_task]]` 的 cron 表达式校验。
web = ["dep:tokio-cron-scheduler"]

[dependencies]
clap = { workspace = true }
crabmate-types = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-cron-scheduler = { workspace = true, optional = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
