[package]
name = "crabmate-im-bridge"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Optional IM bridge service (Feishu MVP): event webhook → CrabMate POST /chat/stream → Feishu reply"
default-run = "crabmate-im-bridge"

[lib]
path = "src/lib.rs"

[[bin]]
name = "crabmate-im-bridge"
path = "src/main.rs"

[dependencies]
crabmate-sse-protocol = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "json", "tokio", "macros"] }
aes = "0.9"
base64 = { workspace = true }
cbc = "0.2"
cipher = "0.5"
dashmap = "6"
hex = "0.4"
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "net",
] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "std",
] }
thiserror = { workspace = true }
futures-util = { workspace = true }
